# ml-exercise-tracker2

./: README.md  TESTING_GUIDE.md  compare_features.py  debug_prediction.py  main.py  notebook_tests.py  pyproject.toml  requirements.txt  test_functions.py  test_improved_prediction.py  test_prediction.py  test_production_pipeline.py
.claude/: settings.local.json
models/: clustering_model.pkl  pca_model.pkl  random_forest_model.pkl
src/data/: make_dataset.py
src/features/: build_features.py  count_repetitions.py  model_persistence_guide.py  remove_outliers.py
src/models/: predict_model.py  predict_model_exact.py  predict_model_fixed.py  train_model.py
src/visualization/: visualize.py
